# robotpy-playingwithfusion

./: .gitignore  .readthedocs.yml  README.rst  meson.build  pyproject.toml
.github/workflows/: dist.yml  scan.yml
docs/: .gitignore  Makefile  api.rst  conf.py  index.rst  setup.py
playingwithfusion/: __init__.py  pwf.cpp
semiwrap/: CANVenom.yml  TMD37003.yml  TimeOfFlight.yml
tests/: test_canvenom.py
