[build-system]
requires = [
    "robotpy-build>=2022.1.0,<2023.0.0",
    "robotpy-wpiutil>=2022.2.1.0,<2023.0.0",
    "wpilib>=2022.2.1.0,<2023.0.0"
]

[tool.robotpy-build]
base_package = "playingwithfusion"

[tool.robotpy-build.wrappers."playingwithfusion._pwf_driver".maven_lib_download]
artifact_id = "PlayingWithFusion-driver"
group_id = "com.playingwithfusion.frc"
repo_url = "https://www.playingwithfusion.com/frc/maven"
version = "2022.01.17"

libs = ["PlayingWithFusionDriver"]

[tool.robotpy-build.wrappers."playingwithfusion._pwf_driver"]
name = "playingwithfusion_driver"
depends = ["wpilib_core", "wpiutil"]

[tool.robotpy-build.wrappers."playingwithfusion".maven_lib_download]
artifact_id = "PlayingWithFusion-cpp"
group_id = "com.playingwithfusion.frc"
repo_url = "https://www.playingwithfusion.com/frc/maven"
version = "2022.01.17"

libs = ["PlayingWithFusion"]

[tool.robotpy-build.wrappers."playingwithfusion"]
name = "playingwithfusion"
sources = [
    "playingwithfusion/pwf.cpp"
]

depends = ["wpilibc", "wpilib_core", "wpiutil", "playingwithfusion_driver"]

generate = [
    { CANVenom = "CANVenom.h" },
    { TMD37003 = "TMD37003.h" },
    { TimeOfFlight = "TimeOfFlight.h" },
]

generation_data = "gen"

[tool.robotpy-build.metadata]
name = "robotpy-playingwithfusion"
description = "PlayingWithFusion for RobotPy"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-playingwithfusion"
license = "BSD-3-Clause"
install_requires = [
    "robotpy-wpiutil>=2022.2.1.0,<2023.0.0",
    "wpilib>=2022.2.1.0,<2023.0.0"
]
