[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-vcs",
    "semiwrap~=0.3.0",
    "hatch-meson~=0.1.0",
    "hatch-robotpy~=0.2.1",
    "wpilib~=2026.2.1",
]


[project]
name = "robotpy-playingwithfusion"
dynamic = ["version"]
description = "PlayingWithFusion for RobotPy"
license = "BSD-3-Clause"
dependencies = [
    "wpilib<2027.0.0,>=2026.2.1",
]

[[project.authors]]
name = "RobotPy Development Team"
email = "robotpy@googlegroups.com"

[project.urls]
"Source code" = "https://github.com/robotpy/robotpy-playingwithfusion"



[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "playingwithfusion/version.py"

[tool.hatch.build.targets.wheel]
packages = ["playingwithfusion"]


[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "PlayingWithFusion-driver"
group_id = "com.playingwithfusion.frc"
repo_url = "https://www.playingwithfusion.com/frc/maven"
version = "2026.2.13"
staticlibs = ["PlayingWithFusionDriver"]
extract_to = "lib"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "PlayingWithFusion-cpp"
group_id = "com.playingwithfusion.frc"
repo_url = "https://www.playingwithfusion.com/frc/maven"
version = "2026.2.13"
staticlibs = ["PlayingWithFusion"]
extract_to = "lib"


[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]


[tool.semiwrap]
update_init = ["playingwithfusion"]

[tool.semiwrap.extension_modules."playingwithfusion._playingwithfusion"]
name = "playingwithfusion"

depends = ["wpilib"]

includes = [
    "lib/include"
]

[tool.semiwrap.extension_modules."playingwithfusion._playingwithfusion".headers]
CANVenom = "CANVenom.h"
TMD37003 = "TMD37003.h"
TimeOfFlight = "TimeOfFlight.h"
